Fixed .toLike issue with tests